# Timer

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  LICENSE  launch.vs.json  shared.cmake
.github/workflows/: build-push-and-pr.yaml  build.yaml
dumps/lib/tier0/: tier0.lib
game/csgo/addons/cs2surf/configs/: api.jsonc
game/csgo/addons/cs2surf/gamedata/: cs2surf-core.games.jsonc
game/csgo/addons/metamod/: cs2surf.vdf
game/csgo/cfg/: cs2surf.cfg
scripts/: format.ps1
src/: cs2surf.cpp  cs2surf.h  forwards.h  pch.h
src/core/: adminmanager.cpp  adminmanager.h  concmdmanager.cpp  concmdmanager.h  cvarmanager.cpp  cvarmanager.h  eventmanager.cpp  eventmanager.h  forwards.cpp  forwards.h  gameconfig.cpp  gameconfig.h  gamedata.cpp  gamedata.h  gamesystem.cpp  gamesystem.h  httpmanager.cpp  httpmanager.h  interfaces.cpp  interfaces.h  logger.cpp  logger.h  memory.cpp  memory.h  menu.cpp  menu.h  patch.cpp  patch.h  playermanager.cpp  playermanager.h  screentext.cpp  screentext.h  sdkhook.cpp  sdkhook.h
src/movement/: movement.cpp  movement.h  mv_hooks.cpp
src/protobuf/: cstrike15_usermessages.pb.h
src/sdk/: common.cpp  common.h  convars2.cpp  convars2.h  datatypes.h  forwardbase.h  gamerules.h  memoverride.cpp  netmessages.h  networkgameserver.h  schema.cpp  schema.h  serversideclient.h  usercmd.h
src/sdk/engine/: clientframe.h  framesnapshot.h
src/sdk/entity/: cbaseentity.cpp  cbaseentity.h  cbasemodelentity.h  cbaseplayercontroller.cpp  cbaseplayercontroller.h  cbaseplayerpawn.cpp  cbaseplayerpawn.h  ccollisionproperty.h  ccsplayercontroller.cpp  ccsplayercontroller.h  ccsplayerpawn.cpp  ccsplayerpawn.h  cgameresourceservice.cpp  cgameresourceservice.h  entityio.h  entityresource.h  observer.h  recipientfilters.cpp  recipientfilters.h  services.cpp  services.h
src/sdk/protobuf/: cstrike15_gcmessages.pb.cc  cstrike15_gcmessages.pb.h  networkbasetypes.pb.h
src/sdk/tier0/: annotations.h  circularbuffer.h  mempool.h
src/surf/: api.cpp  api.h  datatypes.h  surf.h  surf_bot.cpp  surf_bot.h  surf_player.cpp  surf_player.h
src/surf/checkpoint/: commands.cpp  menu.cpp  surf_checkpoint.cpp  surf_checkpoint.h
src/surf/global/: commands.cpp  http.cpp  prop.cpp  router.cpp  surf_global.cpp  surf_global.h
src/surf/hud/: surf_hud.cpp  surf_hud.h
src/surf/misc/: blockradio.cpp  commands.cpp  events.cpp  hide.cpp  hide.h  maxvelfix.cpp  movement_unlocker.cpp  mvunlock.cpp  rampfix.cpp  showtrigger.cpp  showtrigger.h  slopefix.cpp  surf_misc.cpp  surf_misc.h  utils.cpp
src/surf/replay/: events.cpp  file.cpp  hook.cpp  nonav.cpp  playback.cpp  recorder.cpp  surf_replay.cpp  surf_replay.h
src/surf/timer/: commands.cpp  surf_timer.cpp  surf_timer.h  utils.cpp
src/surf/zones/: commands.cpp  edit.cpp  edit.h  hook.cpp  hooks.cpp  surf_zones.cpp  surf_zones.h  utils.cpp
src/utils/: color.h  ctimer.cpp  ctimer.h  enumhelper.h  print.cpp  print.h  typehelper.h  utils.cpp  utils.h  vtablehelper.h
